# FastHTML

./: CMakeLists.txt  README.md
Testing/Temporary/: CTestCostData.txt
include/: FastHTML.h
src/: FastHTML.cpp  mian.cpp  tests.cpp
testsdata/: Investing.tesla.html  investing.resp
